move google config to yaml